Clean up a couple minor bugs on mobile

--- a/views/DashboardView/style.less
+++ b/views/DashboardView/style.less
@@ -65,6 +65,7 @@
       }
       &.status {
         width: 64px;
+        min-width: 64px;
         line-height: 0.85em;
       }
       &.explore {
